[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Watchword_regular_demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/backgroundFelt.png" type="Texture" id=2]
[ext_resource path="res://deprecated/AutoPlayValue.gd" type="Script" id=3]
[ext_resource path="res://MultiplayerOptions.gd" type="Script" id=4]
[ext_resource path="res://Assets/back.png" type="Texture" id=5]
[ext_resource path="res://Assets/backpressed.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=6]
size = 250
font_data = ExtResource( 1 )

[node name="MultiplayerOptions" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 957.215, 534.964 )
scale = Vector2( 1.01146, 1.03079 )
z_index = -20
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TurnTimeLabel" type="Label" parent="."]
margin_left = 265.045
margin_top = 110.303
margin_right = 891.045
margin_bottom = 341.303
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "TURN TIME:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnTimeInput" type="LineEdit" parent="."]
margin_left = 847.063
margin_top = 167.406
margin_right = 1417.07
margin_bottom = 281.406
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "15"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlindAmountLabel" type="Label" parent="."]
margin_left = 336.861
margin_top = 232.515
margin_right = 962.86
margin_bottom = 463.515
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "BLINDS:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlindAmountInput" type="LineEdit" parent="."]
margin_left = 847.063
margin_top = 289.618
margin_right = 1417.07
margin_bottom = 403.618
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 5 )
custom_styles/read_only = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
text = "10"
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoplayLabel" type="Label" parent="."]
margin_left = 258.31
margin_top = 357.682
margin_right = 884.31
margin_bottom = 588.682
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "AUTOPLAY:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoPlayValue" type="Label" parent="."]
margin_left = 848.858
margin_top = 360.418
margin_right = 1014.86
margin_bottom = 591.418
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "OFF"
valign = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="TextureButton" parent="."]
margin_left = 1745.72
margin_top = 20.2448
margin_right = 2257.72
margin_bottom = 532.245
rect_scale = Vector2( 0.25, 0.25 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackLabel" type="Label" parent="Back"]
margin_left = -745.315
margin_top = 98.7766
margin_right = -46.3154
margin_bottom = 414.777
custom_fonts/font = SubResource( 6 )
text = "BACK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="AutoPlayValue" to="AutoPlayValue" method="_on_AutoPlayValue_mouse_entered"]
[connection signal="mouse_exited" from="AutoPlayValue" to="AutoPlayValue" method="_on_AutoPlayValue_mouse_exited"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
